2009-11-24 Baptiste Lepilleur <blep@users.sourceforge.net>
	* src/cppunit/TestResult.cpp: flush stdout & stderr in destructor
	  to avoid message loss in case of crash (bug #2832029).
	* include/cppunit/plugin/TestPlugIn.h: 
	* include/cppunit/plugin/TestPlugInDefaultImpl.h: added missing dllexport
	  for CppUnitTestPlugIn.

2009-11-23 Baptiste Lepilleur <blep@users.sourceforge.net>

    * src/DllPlugInTester/Makefile.am:
    * examples/cppunittest/Makefile.am:
    * examples/money/Makefile.am:
    * examples/simple/Makefile.am:
    * examples/hierarchy/Makefile.am: Applied patch #2807259
      contributed by Jan Echternach. LIBADD_DL contains a list of libraries
      like "-ldl". Thus, it should be in LDADD instead of LDFLAGS in case
      one of the libraries depends on a path set in LDFLAGS.

2008-12-16 Andy Dent
	* src/msvc6/testrunner/MsDevCallerListCtrl.cpp: 
	* INSTALL-VS.Net2008.txt: Added updated project and instructions for 
	building under Visual Studio.Net 2008 and fixed compilation issue.

2008-10-12  Baptiste Lepilleur <blep@users.sourceforge.net>

   * doc/cookbook.dox: fixed typos.

2008-02-21  Steve M. Robbins  <smr@sumost.ca>
	* examples/cppunittest/OrthodoxTest.h:
	* examples/cppunittest/XMLOutputterTest.cpp:
	* examples/hierarchy/main.cpp:
	* include/cppunit/extensions/ExceptionTestCaseDecorator.h:
	* src/cppunit/BriefTestProgressListener.cpp:
	* src/cppunit/TestFactoryRegistry.cpp:
	* src/cppunit/TestPlugInDefaultImpl.cpp:
	* src/cppunit/TestSuccessListener.cpp:
	* src/cppunit/TextProgressListener.cpp:
	* src/cppunit/XmlOutputterHook.cpp:
	* src/DllPlugInTester/CommandLineParserTest.cpp:
	* src/DllPlugInTester/DllPlugInTesterTest.cpp: Changes to suppress 
	warnings of gcc -Wall -W -ansi, mainly from patch [1898225].

2008-02-20  Steve M. Robbins  <smr@sumost.ca>

	* examples/money/MoneyTest.h (TestFixture): Change deprecated
	CPPUNIT_TEST_EXCEPTION to simple CPPUNIT_TEST.
	* examples/money/MoneyTest.cpp (testAddThrow): Wrap throwing